k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: worker-deployment
spec:
   replicas: 1
#Single POD running the multi worker image
   selector:
      matchLabels:
         component: worker
   template:
      metadata:
         labels:
            component: worker
      spec:
         containers:
# Pod wil run a single container - worker
            - name: worker        
              image: stephengrider/multi-worker
